--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ github_editme_path: tomjohnson1492/documentation-theme-jekyll/blob/gh-pages/
 disqus_shortname: idrbwjekyll
 # if you're using disqus for comments, add the shortname here. if not, leave this value blank.
 
-host: 127.0.0.1
+host: 192.168.2.188
 # the preview server used. Leave as is.
 
 port: 4000
@@ -97,6 +97,7 @@ sidebars:
 - mydoc_sidebar
 - product1_sidebar
 - product2_sidebar
+- rabel_sidebar
 - other
 
 description: "Intended as a documentation theme based on Jekyll for technical writers documenting software and other technical products, this theme has all the elements you would need to handle multiple products with both multi-level sidebar navigation, tags, and other documentation features."
