--- a/_data/topnav.yml
+++ b/_data/topnav.yml
@@ -18,3 +18,5 @@ topnav_dropdowns:
           url: /p1_landing_page.html
         - title: Product 2
           url: /p2_landing_page.html
+        - title: Rabel
+          url: /rabel_landing_page.html
