--- a/_data/topnav.yml
+++ b/_data/topnav.yml
@@ -10,13 +10,14 @@ topnav:
 topnav_dropdowns:
 - title: Topnav dropdowns
   folders:
+    - title: Articles
+      folderitems:
+        - title: Magento2
+          url: /magento2_landing_page.html
     - title: Products
       folderitems:
-        - title: Jekyll Documentation Theme
-          url: /mydoc_introduction.html
-        - title: Product 1
-          url: /p1_landing_page.html
-        - title: Product 2
-          url: /p2_landing_page.html
         - title: Rabel
           url: /rabel_landing_page.html
+
+
+
