A lot of adjust: add class to body, so we can have different page layout via css. blog mode, add a post list sidebar etc.

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ output: web
 topnav_title: Catheme
 # this appears on the top navigation bar next to the home button
 
-site_title: Jekyll theme for documentation
+site_title: Cattheme.com Documents
 # this appears in the html browser tab for the site title (seen mostly by search engines, not users)
 
 company_name: Cattheme.com
@@ -95,8 +95,6 @@ defaults:
 sidebars:
 - home_sidebar
 - mydoc_sidebar
-- product1_sidebar
-- product2_sidebar
 - rabel_sidebar
 - other
 
